Documentacion final del swagger
